moved plugin management from client to core